<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$RegisterFragment" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" 
        android:orientation="vertical">
        
        <EditText
	        android:id="@+id/register_username"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/username" >
        	<requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/register_password_first"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword"
	        android:hint="@string/password" />
	    
	    <EditText
	        android:id="@+id/register_password_second"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword" 
	        android:hint="@string/repeated_password" />
	
	    <Button
	        android:id="@+id/register_proceed_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/register_proceed_button_text" />
	    
	    <TextView
	        android:id="@+id/username_constraint_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/username_constraint"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <TextView
	        android:id="@+id/password_constraint_textview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/password_constraint"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <TextView
	        android:id="@+id/same_passwords_constraint"
	        android:layout_width="wrap_content"
	        android:textColor="#FF0000"
	        android:layout_height="wrap_content"
	        android:text="@string/passwords_constraint"
	        android:visibility="gone"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
	    <TextView
	        android:id="@+id/register_error_response"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent">

	    <ProgressBar
	        android:id="@+id/register_progress_bar"
	        style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:visibility="gone" />
	    
    </RelativeLayout>
	
</LinearLayout>

