<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ProfileFragment" >
    
    <LinearLayout
        android:id="@+id/myProfileStatus"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:layout_gravity="center"
	    android:orientation="vertical"
	    android:visibility="visible" >
    
		<ProgressBar
	    	style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="8dp" />
	
	    <TextView
	        android:id="@+id/loading_screen_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="16dp"
	        android:fontFamily="sans-serif-light"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/myprofile_progress_getting_info" />
        
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/myProfileForm"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="gone" 
	    android:orientation="vertical" >
	      
   		<LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <ImageView
		        android:id="@+id/myProfileImage"
		        android:layout_width="170dp"
		        android:layout_height="190dp"
		        android:background="@drawable/navdrawer_profile" />
		        
	        <LinearLayout 
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="vertical"
	        	android:gravity="right"
	        	android:layout_gravity="bottom">
	            
	            <Button
		            android:id="@+id/myProfileTakeNewPictureButton"
		            android:layout_width="140dp"
		            android:layout_height="wrap_content"
		            android:text="@string/take_picture_button_text" />
	            
	            <Button
		            android:id="@+id/myProfileSelectNewPictureButton"
		            android:layout_width="140dp"
		            android:layout_height="wrap_content"
		            android:text="@string/select_image_button_text" />
	            
	        </LinearLayout>
	        
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/myProfileCurrentNickname"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <TextView
	            android:id="@+id/myProfileMeetsLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/meets_label_text"/>
	
	        <TextView
	            android:id="@+id/myProfileMeetsValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <TextView
	            android:id="@+id/myProfileAgeLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/age_label_text"/>
	
	        <TextView
	            android:id="@+id/myProfileAgeValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <TextView
	            android:id="@+id/myProfileGenderLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/gender_label_text"/>
	
	        <TextView
	            android:id="@+id/myProfileGenderValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	    </LinearLayout>
	
	</LinearLayout>
	    
</LinearLayout>
