<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity$LoginFragment" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" 
        android:orientation="vertical">
        
        <EditText
	        android:id="@+id/login_username"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/username" >
        	<requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/login_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="textPassword"
	        android:hint="@string/password" />
	    
	    <Button
	        android:id="@+id/login_proceed_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login_proceed_button_text" />

	    <TextView
	        android:id="@+id/login_error_response"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
	    
    </LinearLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent">

	    <ProgressBar
	        android:id="@+id/login_progress_bar"
	        style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:visibility="gone" />
	    
    </RelativeLayout>
	
</LinearLayout>

