<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".OtherProfileFragment" >
    
    <LinearLayout
        android:id="@+id/otherProfileStatus"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:layout_gravity="center"
	    android:orientation="vertical"
	    android:visibility="visible" >
    
		<ProgressBar
	    	style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="8dp" />
	
	    <TextView
	        android:id="@+id/loadingScreenText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="16dp"
	        android:fontFamily="sans-serif-light"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:text="@string/otherprofile_progress_getting_info" />
        
	</LinearLayout>
	
    <LinearLayout 
        android:id="@+id/otherProfileForm"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="gone" 
	    android:orientation="vertical" >
	      
   		<ImageView
		    android:id="@+id/otherProfileImage"
		   	android:layout_width="170dp"
		    android:layout_height="190dp"
		    android:background="@drawable/navdrawer_profile" />
	
	    <TextView
	        android:id="@+id/otherProfileCurrentNickname"
	        android:layout_width="wrap_content"
	       	android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <TextView
	            android:id="@+id/otherProfileMeetsLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/meets_label_text"/>
	
	        <TextView
	            android:id="@+id/otherProfileMeetsValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <TextView
	            android:id="@+id/otherProfileAgeLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/age_label_text"/>
	
	        <TextView
	            android:id="@+id/otherProfileAgeValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	        
	        <TextView
	            android:id="@+id/otherProfileGenderLabel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/gender_label_text"/>
	
	        <TextView
	            android:id="@+id/otherProfileGenderValue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
	    </LinearLayout>
	
	</LinearLayout>
	    
</LinearLayout>
